# llm-insights-server

./: pyproject.toml  requirements.txt
server/: main.py
